# TinyFish-cookbook

./: CHANGELOG.md  CONTRIBUTING.md  README.md
.claude-plugin/: marketplace.json
Manga-Availability-Finder/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  (+3 more)
TinyDetective/: .env.example  .gitignore  README.md  pyproject.toml
TinyDetective/adapters/: __init__.py  comparison_site_adapter.py  official_product_adapter.py  seller_listing_adapter.py  seller_page_adapter.py  source_page_adapter.py
TinyDetective/agents/: __init__.py  candidate_discovery_agent.py  candidate_triage_agent.py  case_draft_agent.py  evidence_agent.py  official_product_match_agent.py  product_comparison_agent.py  ranking_agent.py  reasoning_enrichment_agent.py  research_summary_agent.py  seller_evidence_agent.py  seller_listing_analysis_agent.py  seller_listing_discovery_agent.py  seller_listing_triage_agent.py  seller_profile_agent.py  source_extraction_agent.py
TinyDetective/backend/: __main__.py  main.py
TinyDetective/docs/: seller-case-feature-plan.md
TinyDetective/frontend/: app.js  index.html  styles.css
TinyDetective/models/: __init__.py  case_schemas.py  schemas.py
TinyDetective/services/: __init__.py  investigation_orchestrator.py  investigation_store.py  logging_config.py  openai_client.py  seller_case_orchestrator.py  settings.py  tinyfish_client.py  tinyfish_runtime.py
TinyDetective/tests/: __init__.py  test_agents.py  test_orchestrator.py  test_seller_case_orchestrator.py
TinyDetective/tests/fixtures/: sample_investigation_output.json
(+1049 files in other folders)
